gameをviewにして単純に扱えるようにした

--- a/lunandroid/src/main/res/layout/acrivity_game.xml
+++ b/lunandroid/src/main/res/layout/acrivity_game.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextureView
-        android:id="@+id/gameview"
+    <ninja.hikaruna.lunandroid.Game
+        android:id="@+id/game"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
