--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
-    <TextureView
-        android:id="@+id/gameview"
+    <ninja.hikaruna.lunandroid.Game
+        android:id="@+id/game"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
